--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -23,7 +23,9 @@
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
-        <a href="#" class="btn btn-primary ms-3">Register Now</a>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
+  Register Now
+</button>
       </div>
     </div>
   </nav>
@@ -86,7 +88,50 @@
   <footer>
     &copy; 2025 Holiday Tech Hub | Designed by [Your Name]
   </footer>
+  <!-- Modal Form -->
+   <!-- Modal Trigger Button (Example) -->
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Modal Structure -->
+<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="registerModalLabel">Register for Holiday Tech Classes</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="registrationForm">
+          <div class="mb-3">
+            <label for="studentName" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="studentName" required>
+          </div>
+          <div class="mb-3">
+            <label for="studentAge" class="form-label">Age</label>
+            <input type="number" class="form-control" id="studentAge" required>
+          </div>
+          <div class="mb-3">
+            <label for="parentContact" class="form-label">Parent Contact</label>
+            <input type="tel" class="form-control" id="parentContact" required>
+          </div>
+          <div class="mb-3">
+            <label for="interestArea" class="form-label">Area of Interest</label>
+            <select class="form-select" id="interestArea" required>
+              <option value="">Choose...</option>
+              <option>Web Development</option>
+              <option>Robotics</option>
+              <option>Graphic Design</option>
+              <option>AI/Programming</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Submit Registration</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
