--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -24,8 +24,9 @@
           <li class="nav-item"><a class="nav-link" href="showcase.html">Showcase</a></li>
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="Testimonial.html">Testimonials</a></li>
         </ul>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
+        <button type="button" class="btn btn-register" data-bs-toggle="modal" data-bs-target="#registerModal">
           Register Now
         </button>
       </div>
@@ -38,7 +39,7 @@
       <div class="hero-left col-lg-6 text-center">
         <h1 class="display-4 ">Welcome to Holiday Tech Hub</h1>
         <p class="lead">See What Our Future Tech Leaders Are Building!</p>
-        <a href="#" class="btn btn-light btn-lg">Explore Projects</a>
+        <a href="#" class="btn btn-gradient btn-lg">Explore Projects</a>
       </div>
       <!-- flip image -->
       <div class="hero-right col-lg-6 flip-3d-pic">
@@ -60,44 +61,130 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card project-card">
-            <img src="images/project1.jpg" class="card-img-top" alt="Project 1">
+            <img src="images/blue3.jpg" class="card-img-top" alt="Project 1">
             <div class="card-body">
               <h5 class="card-title">Student Name 1</h5>
               <p class="card-text">E-commerce Website</p>
-              <a href="#" class="btn btn-primary">View Portfolio</a>
+              <a href="#" class="btn btn-register">View Portfolio</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card project-card">
-            <img src="images/project2.jpg" class="card-img-top" alt="Project 2">
+            <img src="images/blue1.jpg" class="card-img-top" alt="Project 2">
             <div class="card-body">
               <h5 class="card-title">Student Name 2</h5>
               <p class="card-text">Environment Awareness Site</p>
-              <a href="#" class="btn btn-primary">View Portfolio</a>
+              <a href="#" class="btn btn-register">View Portfolio</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card project-card">
-            <img src="images/project3.jpg" class="card-img-top" alt="Project 3">
+            <img src="images/blue3.jpg" class="card-img-top" alt="Project 3">
             <div class="card-body">
               <h5 class="card-title">Student Name 3</h5>
               <p class="card-text">Online Portfolio & Blog</p>
-              <a href="#" class="btn btn-primary">View Portfolio</a>
+              <a href="#" class="btn btn-register">View Portfolio</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+<!-- About me section -->
+<section class="about-me">
+    <div class="container">
+      <!-- About Me Content -->
+      <h2 class="text-center mb-4 display-4">About Us</h2>
+      <p class="w-50 mx-auto text-center">We are a community of passionate tech enthusiasts dedicated to empowering the next generation of innovators. Our holiday classes provide hands-on experience in web development, robotics, graphic design, and more.</p>
+      <p class="text-center">Join us to learn, create, and showcase your skills!</p>
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <!-- FRONT -->
+              <div class="flip-card-front text-center p-3">
+                <img src="person1.jpg" class="img-fluid rounded-circle mb-3" alt="Person">
+                <h5>John Doe</h5>
+                <p>A passionate software developer who loves learning new technologies.</p>
+                <p>A passionate software developer who loves learning new technologies.</p>
+                <p>A passionate software developer who loves learning new technologies.</p>
+                
+                <!-- button at the bottom of the card -->
+                <button class="btn btn-register mt-2">More Info</button>
+              </div>
 
+              <!-- BACK -->
+              <div class="flip-card-back text-center p-3">
+                <h6>University of Coding</h6>
+                <p>Studying BSc in Computer Science.</p>
+                <div class="social-icons mt-3">
+                  <a href="#" target="_blank"><i class="bi bi-facebook fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-twitter fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-linkedin fs-3 mx-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <!-- FRONT -->
+              <div class="flip-card-front text-center p-3">
+                <img src="person1.jpg" class="img-fluid rounded-circle mb-3" alt="Person">
+                <h5>John Doe</h5>
+                <p>A passionate software developer who loves learning new technologies.</p>
+                <button class="btn btn-register mt-2">More Info</button>
+              </div>
+
+              <!-- BACK -->
+              <div class="flip-card-back text-center p-3">
+                <h6>University of Coding</h6>
+                <p>Studying BSc in Computer Science.</p>
+                <div class="social-icons mt-3">
+                  <a href="#" target="_blank"><i class="bi bi-facebook fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-twitter fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-linkedin fs-3 mx-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <!-- FRONT -->
+              <div class="flip-card-front text-center p-3">
+                <img src="person1.jpg" class="img-fluid rounded-circle mb-3" alt="Person">
+                <h5>John Doe</h5>
+                <p>A passionate software developer who loves learning new technologies.</p>
+                <button class="btn btn-register mt-2">More Info</button>
+              </div>
+
+              <!-- BACK -->
+              <div class="flip-card-back text-center p-3">
+                <h6>University of Coding</h6>
+                <p>Studying BSc in Computer Science.</p>
+                <div class="social-icons mt-3">
+                  <a href="#" target="_blank"><i class="bi bi-facebook fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-twitter fs-3 mx-2"></i></a>
+                  <a href="#" target="_blank"><i class="bi bi-linkedin fs-3 mx-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+</section>
   <!-- CTA Banner -->
-  <section class="cta-banner">
+  <section class="cta-banner text-center py-5 bg-banner text-white">
     <h2>Want to Join Our Next Holiday Class?</h2>
-    <a href="#" class="btn btn-light btn-lg mt-3">Register Now</a>
+    <a href="#" class="btn btn-register btn-lg mt-3">Register Now</a>
   </section>
-
+  
   <!-- Footer -->
   <footer>
     &copy; 2025 Holiday Tech Hub | Designed by Engr. Akia Samuel
@@ -138,7 +225,7 @@
               <option>AI/Programming</option>
             </select>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Submit Registration</button>
+          <button type="submit" class="btn btn-register w-100">Submit Registration</button>
         </form>
       </div>
     </div>
