--- a/Day 1/showcase.html
+++ b/Day 1/showcase.html
@@ -24,6 +24,7 @@
           <li class="nav-item"><a class="nav-link active" href="showcase.html">Showcase</a></li>
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="Testimonial.html">Testimonials</a></li>
         </ul>
       </div>
     </div>
